Moved to css vars, fuzzy-search and render funcs.

--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -8,5 +8,8 @@
 
   "searchPlaceholder": {
     "message": "Lesezeichen suchen"
+  },
+  "searchPlaceholderActive": {
+    "message": "Beginne zu tippen!"
   }
 }
