--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -7,6 +7,10 @@
     "message": "Search bookmarks"
   },
 
+  "newTab": {
+    "message": "New tab"
+  },
+
   "title": {
     "message": "Title"
   },
