Bookmark parent folder now changable in edit modal

--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -19,6 +19,9 @@
     "message": "Neuer Tab"
   },
 
+  "parentFolder": {
+    "message": "Elternordner"
+  },
   "title": {
     "message": "Titel"
   },
