--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -19,6 +19,9 @@
     "message": "New tab"
   },
 
+  "parentFolder": {
+    "message": "Parent folder"
+  },
   "title": {
     "message": "Title"
   },
