add missing dictionary entry

--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -19,6 +19,9 @@
     "message": "Neuer Tab"
   },
 
+  "noBookmarkFound": {
+    "message": "Keine Lesezeichen gefunden."
+  },
   "parentFolder": {
     "message": "Elternordner"
   },
