--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -19,6 +19,9 @@
     "message": "New tab"
   },
 
+  "noBookmarkFound": {
+    "message": "No bookmark found."
+  },
   "parentFolder": {
     "message": "Parent folder"
   },
